<resources>
    <string name="app_name">AndroidLesson</string>
    <string name="loop_to_layoutAct">打开layout活动</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_text">示例文本</string>
    <string name="linearLayout" translatable="false">线性布局</string>
    <string name="tableLayout">表格布局</string>
    <string name="gridLayout">网格布局</string>
    <string name="relativeLayout">相对布局</string>
    <string name="absoluteLayout">绝对布局</string>
    <string name="title_activity_layout">LayoutActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="loop_to_menuA">跳转到菜单活动</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>